# control-tower-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bedrock.js  controlTower.js  control_tower.py  cost-config.json  db.js  index.html  insights.js  langsmith.js  package-lock.json  package.json  run-control-tower.bat  secrets.js  server.js  server_bkp.js
.github/workflows/: deploy-gcp.yml  deploy.yml  task-definition.json
mcp/: controlTower.js  hosts.js  mcp-config.json  mcpClient.js  monitor.js
public/: index.html
sdk/control-tower-js/: README.md  controlTower.js  mcp-proxy.js  otel.js  package.json  tokenCounter.js
sdk/control-tower-py/: README.md  pyproject.toml
sdk/control-tower-py/control_tower/: __init__.py
